move resources handling to external controllers

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {},
-  "author": "Michal Michalczuk",
+  "author": {
+    "name": "Michal Michalczuk"
+  },
   "license": "ISC",
   "dependencies": {
     "hapi": "^16.4.1"
