--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^16.4.1",
+    "hapi-auth-basic": "^4.2.0",
     "hapi-swagger": "^7.7.0",
     "inert": "^4.2.0",
     "joi": "^10.5.2",
