--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Simple REST API - example for lectures",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "eslint": "eslint",
     "lint": "npm run eslint -- . --ext .js"
   },
