--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,11 +12,11 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-const-assign": "warn",
+        "no-const-assign": "error",
         "no-this-before-super": "warn",
         "no-undef": "warn",
         "no-unreachable": "warn",
-        "no-unused-vars": "warn",
+        "no-unused-vars": "error",
         "constructor-super": "warn",
         "valid-typeof": "warn",
         "semi":"error"
