--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "boom": "^7.2.0",
     "hapi": "^16.4.1",
     "hapi-auth-basic": "^4.2.0",
     "hapi-swagger": "^7.7.0",
