update eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,9 @@
         "node": true
     },
     "parserOptions": {
+        "ecmaVersion": 2018,
         "ecmaFeatures": {
-            "jsx": true
+            "experimentalObjectRestSpread": true
         },
         "sourceType": "module"
     },
